feat: Implemented style types page
