# backend/internal/routes/styleType.go
@@ -3,12 +3,13 @@ package routes
 import (
 	"chairTime/constant"
 	"chairTime/internal/app"
-	controllers "chairTime/internal/controllers/styleType"
+	styleTypeController "chairTime/internal/controllers/styleType"
 
 	"github.com/labstack/echo/v4"
 )
 
 func StyleTypeRoute(app *app.Application, groupRoute echo.Group) {
-	groupRoute.GET("/style-types", app.RouteHandler(controllers.GetStyleTypes))
-	groupRoute.POST("/style-type/create", app.RouteHandler(controllers.CreateStyleType), app.Authorization([]int{constant.MasterRoleId}))
+	groupRoute.GET("/style-types", app.RouteHandler(styleTypeController.GetStyleTypes))
+	groupRoute.POST("/style-type/create", app.RouteHandler(styleTypeController.CreateStyleType), app.Authorization([]int{constant.MasterRoleId}))
+	groupRoute.DELETE("/style-type/:style_type_id", app.RouteHandler(styleTypeController.DeleteStyleType), app.Authorization([]int{constant.AdminRoleId}))
 }
